# world_sim

./: CMakeLists.txt
src/: main.c  simulation.c  simulation.h
